# Rust-todo

./: .env  .gitignore  Cargo.toml  README.md  er.drawio  index.html  one
migrations/2021-10-31-041349_todo/: down.sql  up.sql
src/: create.rs  db.rs  insert.rs  main.rs  model.rs  schema.rs  show.rs
src/controller/: insert.rs  mod.rs  show.rs
