[package]
name = "rust-todo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0"
actix-rt = "1.0"
diesel = { version = "1.4.1", features = ["mysql"] }
dotenv = "0.15.0"
serde = { version = "^1.0.101", features = ["derive"] }
serde_json = "^1.0.41"